--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,26 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.semaforo{
+    background-color: rgb(0, 0, 0);
+    height: 500px;
+    width: 300px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: column;
+}
+
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+.luz{
+    border-radius: 50%;
+    height: 130px;
+    width: 130px;
+}
